2008-05-28 Sancho Lerena  <slerena@gmail.com>

	* A lot of fixes in incident, used user/email assigment
	for each group defined. Better management of WU in incidents
	and solved several bugs with delete, update and visualization
	of projects and incidents. Better managment of multi-day
	spare workunit, added two checkboxes to split WU and do 
	an optional fordward propagation.

2008-05-26 Sancho Lerena  <slerena@gmail.com>

	* functions_calendar.php: Added calendar for year view
	and functions to return work days backwards.

	* FreeSans.ttf: Moved from reporting (now deleted) to
	include.
	
	* attachment/tmp: Added to repo.

	* /user_spare_workunit.php: Now can enter units > 8hr
	and make automatically a split from back in time, using
	8 hr (or user defined)for each day. Very useful to enter
	vacations.

	* report_annual.php: Added year view, show in colors
	worked days and vacation days. Also show a summary.

	* Minor fixes in other files.

2008-05-25 Sancho Lerena  <slerena@gmail.com>

    * project_detail.php: Added more information (statistica, financial)
    to project detailed view. Some of that information could be used
    in the future for specific automated PDF reports.

    * report_monthly.php: Added charged work hours per user / month.

    * functions_graph.php: Added two funtions (graphviz dep) to
    show a project tree and user tasks in a fancy tree :-)

    * projects/project_detail.php: Added a project tree graph under 
    the data controls.

    * projects/project_tree.php: Added a new option: Project tree
    graph, using graphviz, and using a imagemap to navigate. Has
    a menu to select different options/views.

    * users/user_task_assigment.php: Shows all tasks assigned to 
    current user, with WU data and last entered wu.

    * main_menu.php, side_menu.php: Updated options.

    * setup/incident.php: Added options to future implementations 
    of SLA in reporting.

    * integria_db.sql: New tables (incident SLA and notification 