@@ -12,6 +12,10 @@
 // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 // GNU General Public License for more details.
 
+
+if (!isset($config["id_user"]))
+        return;
+
 $id_user = $_SESSION["id_usuario"];
 
 if (isset($_GET["sec"]))
@@ -593,36 +597,6 @@ echo '
   </div>
 </div>'; 
 // End of user box
-
-
-// Sponsors
-echo "<div class='portlet'>";
-echo "<h3>".$lang_label["links_header"]."</h3>";
-echo "<ul class='sidemenu'>";
-
-$sql1='SELECT * FROM tlink ORDER BY name';
-$result=mysql_query($sql1);
-if ($row=mysql_fetch_array($result)){
-	$sql1='SELECT * FROM tlink ORDER BY name';
-	$result2=mysql_query($sql1);
-	while ($row2=mysql_fetch_array($result2)){
-		echo "<li><a href='".$row2["link"]."' target='_new' class='mn'>".$row2["name"]."</a></li>";
-	}
-}
-echo "</ul></div>";
-
-
-// Banners
-echo '<div class="portlet">';
-echo "<h3>Our sponsors</h3>";
-echo "<p>";
-echo "<img src='images/minilogoartica.jpg'>";
-echo "<br><br>";
-echo "<img src='images/sflogo.png'>";
-echo "<br><br>";
-echo "</p>";
-echo "</div>";
-
 
 
 ?>
